after lesson - all work fine

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <base href="/">
   </head>
   <body>
+    <app>
+      Loading...
+    </app>
     <script src="polyfills.bundle.js"></script>
     <script src="vendor.bundle.js"></script>
     <script src="main.bundle.js"></script>
